[tool.poetry]
name = "telemetry-plotter"
version = "0.1.0"
description = "Uses CSV to plot and generate PDF report"
authors = ["Filippo <pippo.faccini@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
PyLaTeX = "^1.4.1"
matplotlib = "^3.6.1"
pandas = "^1.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
